<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="change_sig_thickness_text">Pen Size</string>
    <string name="logo">Logo</string>
	<string name="photo_saved_text">Photo Saved</string>
    <string name="move_sig_text">Move Sig</string>
    <string name="new_sig_text">Re-Sign</string>
    <string name="discard_portrait_text">Delete</string>
    <string name="save_portrait_text">Save</string>
    <string name="sig_desc">Signature Image</string>
    <string name="app_name">Celeb Selfies</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_photo_text">Take Photo</string>
    <string name="view_photos_text">View Photos</string>
    <string name="edit_profile_text">Edit Profile</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="capture">Capture</string>
    <string name="save_photo_text">Save</string>
    <string name="discard_photo_text">Discard</string>
    <string name="title_activity_get_signature">GetSignature</string>
    <string name="action_move_image">Move Signature</string>
    <string name="action_move_sig">Move Signature</string>
    <string name="clear_text">Clear</string>
    <string name="accept_sig_text">Accept Sig</string>
    <string name="title_activity_view_photo">ViewPhoto</string>
    <string name="change_sig_color_text">Color</string>
    <string name="title_activity_color_dialog">ColorDialog</string>
    <string name="blue_button">Blue</string>
    <string name="green_button">Green</string>
    <string name="purple_button">Purple</string>
    <string name="red_button">Red</string>
    <string name="yellow_button">Yellow</string>
    <string name="black_button">Black</string>
    <string name="title_activity_signed_picture">SignedPicture</string>
    <string name="celeb_photo_desc">Celebrity Photo</string>
    <string name="title_activity_photo_gallery">PhotoGallery</string>

</resources>