<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.putty.celebselfie_v2.GetSignature" >

    <item
        android:id="@+id/action_clear_sig"
        android:showAsAction="ifRoom"
        android:orderInCategory="200"
        android:title="@string/clear_text"/>
    
    <item
        android:id="@+id/action_submit_sig"
        android:showAsAction="ifRoom"
        android:orderInCategory="100"
        android:title="@string/accept_sig_text"/>
    
    <item
        android:id="@+id/action_change_sig_color"
        android:showAsAction="ifRoom"
        android:orderInCategory="300"
        android:title="@string/change_sig_color_text"/>
    
    <item
        android:id="@+id/action_change_sig_thickness"
        android:showAsAction="ifRoom"
        android:orderInCategory="400"
        android:title="@string/change_sig_thickness_text"/>

</menu>
