<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/portraitBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.putty.celebselfie_v2.SignedPicture" >

    <ImageView
        android:id="@+id/celeb_photo_image"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/celeb_photo_desc"
        android:scaleType="fitXY" />

    <ImageView
        android:id="@+id/sig_image1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sig_desc"
        android:scaleType="fitXY"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/sig_image2"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/sig_desc"
        android:scaleType="fitXY"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/sig_image3"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/sig_desc"
        android:scaleType="fitXY" />

    <Button
        android:id="@+id/save_portrait"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/greenbutton_menu"
        android:text="@string/save_portrait_text" />

    <Button
        android:id="@+id/move_sig"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/orangebutton_menu"
        android:text="@string/move_sig_text" />

    <Button
        android:id="@+id/get_new_sig"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="175dp"
        android:background="@drawable/purplebutton_menu"
        android:text="@string/new_sig_text" />

    <Button
        android:id="@+id/discard_portrait"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="250dp"
        android:background="@drawable/redbutton_menu"
        android:text="@string/discard_portrait_text" />


</RelativeLayout>