<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/celebselfies_background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.putty.celebselfie_v2.Home" >
    
    <Button
        android:id="@+id/takePhotoButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="125dp"
        android:background="@drawable/greenbutton_menu"
        android:text="@string/take_photo_text" />

    <Button
        android:id="@+id/viewPhotosButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/takePhotoButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/orangebutton_menu"
        android:text="@string/view_photos_text" />

    <Button
        android:id="@+id/editProfileButton"
        android:layout_width="125dp"
        android:layout_height="50dp"
        android:layout_below="@id/viewPhotosButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/purplebutton_menu"
        android:text="@string/edit_profile_text" />

</RelativeLayout>